adjust TU : network area diagram tests wit new endpoint
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>